--- a/socialnetwork/social/templates/social/post_detail.html
+++ b/socialnetwork/social/templates/social/post_detail.html
@@ -3,13 +3,20 @@
 
 {% block content %}
 <div class="container">
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom">
-            <h5>Add a Post!</h5>
+    <div class="row mt-5">
+        <div class="col-md-5 col-sm-6">
+            <a href="{% url 'post-list' %}" class="btn btn-light ">Back to Feed</a>
         </div>
     </div>
 
-    <div class="row justify-content-center mt-3 mb-5">
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-5 col-sm-12 border-bottom">
+            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
+            <p>{{ post.body }}</p>
+        </div>
+    </div>
+
+    <!-- <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12 border-bottom">
           <form method="POST">
               {% csrf_token %}
@@ -19,14 +26,6 @@
               </div>
           </form>
         </div>
-    </div>
-    {% for post in post_list %}
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom">
-            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
-            <p>{{ post.body }}</p>
-        </div>
-    </div>
-    {% endfor %}
+    </div> -->    
 </div>
 {% endblock content %}
