--- a/socialnetwork/social/templates/social/post_edit.html
+++ b/socialnetwork/social/templates/social/post_edit.html
@@ -9,15 +9,15 @@
         </div>
     </div>
 
+    
     <div class="row justify-content-center mt-3">
         <div class="col-md-5 col-sm-12 border-bottom">
-            <p><strong>{{ post.author }}</strong> {{ post.created_on }}</p>
-            <p>{{ post.body }}</p>
+            <h5>Update Your Post!</h5>
         </div>
     </div>
 
-     <div class="row justify-content-center mt-3 mb-5">
-        <div class="col-md-5 col-sm-12">
+    <div class="row justify-content-center mt-3 mb-5">
+        <div class="col-md-5 col-sm-12 border-bottom">
           <form method="POST">
               {% csrf_token %}
               {{ form | crispy }}
