--- a/socialnetwork/social/templates/social/comment_delete.html
+++ b/socialnetwork/social/templates/social/comment_delete.html
@@ -9,20 +9,15 @@
         </div>
     </div>
 
-
-    <div class="row justify-content-center mt-3">
-        <div class="col-md-5 col-sm-12 border-bottom">
-            <h5>Update Your Post!</h5>
-        </div>
-    </div>
-
+    
     <div class="row justify-content-center mt-3 mb-5">
         <div class="col-md-5 col-sm-12 border-bottom">
           <form method="POST">
               {% csrf_token %}
-              {{ form | crispy }}
+              <h5>Are you Sure??</h5>
+              <p>You are about to delete this comment, this cannot be undone.</p>
               <div class="d-grid gap-2">
-                  <button class="btn btn-success mt-3">Submit!</button>
+                  <button class="btn btn-danger mt-3">Delete</button>
               </div>
           </form>
         </div>
